configuracoes/Gramatica.txt
1. <programa> ::=
	program identificador (<lista de identificadores>);
	<bloco>.

2. <bloco> ::=
	[<parte de declaracoes de rotulos>]
	[<parte de definicoes de tipos>]
	[<parte de declaracoes de variaveis>]
	[<parte de declaracoes de sub-rotinas>]
	<comando composto>

3. <parte de declaracoes de rotulos> ::=
	label numero {,numero};

4. <parte de definicoes de tipos> ::=
	type<definicao de tipo> {;<definicao de tipo>};

5. <definicao de tipo> ::=
	identificador = <tipo>

6. <tipo> ::=
	identificador|
	array[<indice> {, <indice>}] of <tipo>

7. <indice> ::= 
	numero .. numero

8. <parte de declaracoes de variaveis> ::=
	var <declaracoes de variaveis>	
		{; <declaracoes de variaveis>};

9. <declaracoes de variaveis> ::=
	<lista de identificadores> : <tipo>

10. <lista de identificadores>::=
	identificador {, identificador}

11. <parte de declaracoes de sub-rotinas> ::=
	{<declaracoes de procedimentos>;|
	 <declaracoes de funcao>;}

12. <declaracao de procedimento> ::=
	procedure identificador
		[<parametros formais>]; <bloco>
		
13. <declaracao de funcao> ::=
	function identificador
		[<parametros formais>]; identificador;
		<bloco>

14. <parametros formais> ::=
	(<secoes de parametros formais>
	 {;<secoes de parametros formais>})

15. <secoes de parametros formais> ::=
	[var] <lista de identificadores>;identificador
	| function <lista de identificadores>;identificador
	| procedure <lista de identificadores>

16. <comando composto> ::=
	begin <comando>{; <comando>} end

17. <comando> ::=
	[numero;]<comando sem rotulo>

18. <comando sem rotulo>
	<atribuicoes>
	| <chamada de procedimento>
	| <desvio>
	| <comando composto>
	| <comando condicional>
	| <comando repetitivo>

19. <atribuicoes> ::=
	<variavel> := <expressoes>

20. <chamada de procedimentos> ::=
	identificador [(<lista de expressoes>)]
	
21. <desvios> ::=
	goto numero

22. <comando condicional> ::=
	if <expressao> then <comando sem rotulo>
	[else <comando sem rotulo>]

23. <comando repetitivo> ::=
	while <expressao> do <comando sem rotulo>

24. <lista de expressoes> ::=
	<expressoes> {, <expressoes>}

25. <expressoes> ::=
	<expressao simples>[<relacao><expressao simples>]

26. <relacao> ::=
	= | <> | < | <= | > | >=

27. <expressao simples> ::=
	[+ | -] <termo> {(+ | - | or) <termo>}

28. <termo> ::=
	<fator> {(* | div | and) <fator>}

29. <fator> ::=
	identificador <fatorAux>
	|(<expressoes>)
	|not <fator>

29.5. <fatorAux> ::=
	[<lista de expressoes>]
	| [(lista de expressoes)]

30. <variavel> ::=
	identificador [<lista de expressoes>]

31. <chamada de funcao> ::=
	identificador [(<lista de expressoes>)]
